Fixed image in box

--- a/index.html
+++ b/index.html
@@ -96,21 +96,20 @@
 	 </div>
 	 
 	<section id='Ireland'class='container'>
-	   <div class="container content">
-	  <h1>Ireland</h1>
-	<div class="row">
-	<div class='text col-4'>
-	<p>Ireland is located on the west side of Europe right beside the UK on its west side. Its population is just shy of 5 million people 
-		with numbers still rising ever since the end of the famine. The native language in Ireland is Irish although it is on the decline with
-		English being the main language spoken for some time. 
-		Ireland is mainly a christian country but there are many other religions that are practised in Ireland.
-	</p>
-	</div>
-	</div>
-	<div>
-	<img src='images/ireland.jpg' alt='Ireland' class='images col-4'>
-	</div>
-	</div>
+	   <div class="container content border border-4 border-dark">
+      <h1 class="text-center">Ireland</h1>
+    <div class="row ">
+    <div class='text col-md-6 text-center'>
+    <p>Ireland is located on the west side of Europe right beside the UK on its west side. Its population is just shy of 5 million people 
+        with numbers still rising ever since the end of the famine. The native language in Ireland is Irish although it is on the decline with
+        English being the main language spoken for some time. 
+        Ireland is mainly a christian country but there are many other religions that are practised in Ireland.
+    </p>
+    </div>
+
+    <img src='images/ireland.jpg' alt='Ireland' class='images col-md-5'>
+    </div>
+    </div>
      </section>
 	
     
