--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
       <li><a class="dropdown-item" href="#Estonia">Intro</a></li>
-      <li><a class="dropdown-item" href="indivual/ireland">Background/History</a></li>
-      <li><a class="dropdown-item" href="#">Traditions/Customs</a></li>
-      <li><a class="dropdown-item" href="#">Clothing/Dances</a></li>
-      <li><a class="dropdown-item" href="#">Food</a></li>
+      <li><a class="dropdown-item" href="est_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="est_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="est_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="est_food.html">Food</a></li>
     </ul>
   </div>
   <div class="dropdown">
@@ -51,10 +51,10 @@
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
       <li><a class="dropdown-item" href="#Romania">Intro</a></li>
-      <li><a class="dropdown-item" href="indivual/ireland#">Background/History</a></li>
-      <li><a class="dropdown-item" href="#">Traditions/Customs</a></li>
-      <li><a class="dropdown-item" href="#">Clothing/Dances</a></li>
-      <li><a class="dropdown-item" href="#">Food</a></li>
+      <li><a class="dropdown-item" href="ro_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="ro_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="ro_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="ro_food.html">Food</a></li>
     </ul>
   </div>
   <div class="dropdown">
@@ -64,10 +64,10 @@
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
       <li><a class="dropdown-item" href="#Moldova">Intro</a></li>
-      <li><a class="dropdown-item" href="indivual/ireland#">Background/History</a></li>
-      <li><a class="dropdown-item" href="#">Traditions/Customs</a></li>
-      <li><a class="dropdown-item" href="#">Clothing/Dances</a></li>
-      <li><a class="dropdown-item" href="#">Food</a></li>
+      <li><a class="dropdown-item" href="mo_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="mo_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="mo_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="mo_food.html">Food</a></li>
     </ul>
   </div>
   <div class="dropdown">
@@ -77,10 +77,10 @@
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
       <li><a class="dropdown-item" href="#Nigeria">Intro</a></li>
-      <li><a class="dropdown-item" href="indivual/ireland#">Background/History</a></li>
-      <li><a class="dropdown-item" href="#">Traditions/Customs</a></li>
-      <li><a class="dropdown-item" href="#">Clothing/Dances</a></li>
-      <li><a class="dropdown-item" href="#">Food</a></li>
+      <li><a class="dropdown-item" href="ni_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="ni_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="ni_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="ni_food.html">Food</a></li>
     </ul>
   </div>
   <div class="dropdown">
@@ -90,10 +90,10 @@
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
       <li><a class="dropdown-item" href="#India">Intro</a></li>
-      <li><a class="dropdown-item" href="indivual/ireland#">Background/History</a></li>
-      <li><a class="dropdown-item" href="#">Traditions/Customs</a></li>
-      <li><a class="dropdown-item" href="#">Clothing/Dances</a></li>
-      <li><a class="dropdown-item" href="#">Food</a></li>
+      <li><a class="dropdown-item" href="ind_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="ind_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="ind_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="ind_food.html">Food</a></li>
     </ul>
   </div>
     </nav>
