--- a/ni_food.html
+++ b/ni_food.html
@@ -99,27 +99,27 @@
 	 </div>
    
 	 <body>
-	<section id='Clothing'class='container'>
+	<section id='Food'class='container'>
 	   <div class="container content border border-4 border-dark">
-      <h1 class="text-center">Clothing</h1>
+      <h1 class="text-center">Food</h1>
     <div class="row ">
     <div class='text col-md-6 text-center'>
-    <p>CLOTHING TEXT HERE
+    <p>FOOD TEXT HERE
     </p>
     </div>
     
-    <img src='images/ireland.jpg' alt='Ireland' class='images col-md-5'>
+    <img src='images/ire_food.jpg' alt='Food image' class='images col-md-5'>
     </div>
     </div>
      </section>
 	
-    	<section id='Dances'class='container'>
+    	<section id='History'class='container'>
 	   <div class="container content border border-4 border-dark">
-      <h1 class="text-center">Dances</h1>
+      <h1 class="text-center">Food Gallery</h1>
     <div class="row">
     <img src='images/estonia.jpg' alt='Estonia' class='images col-md-5'>
     <div class='text col-md-6 text-center'>
-    <p>DANCES TEXT HERE
+    <p>FOOD IMAGES HERE
     </p>
     </div>
     
