File organisation + navbar fixes

--- a/countries/moldova/mo_food.html
+++ b/countries/moldova/mo_food.html
@@ -17,17 +17,17 @@
     <!-- Here is our main header that is used across all the pages of our website -->
 <nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
       <ul class="navbar-nav my-2">
-           <a type="button" class="btn btn-outline-dark mx-2 px-3" href="index.html">Home</a>
+           <a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
         <div class="dropdown">
     <button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
       Ireland
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="ire_background.html">Background/History</a></li>
-      <li><a class="dropdown-item" href="ire_traditions.html">Traditions/Customs</a></li>
-      <li><a class="dropdown-item" href="ire_clothes.html">Clothing/Dances</a></li>
-      <li><a class="dropdown-item" href="ire_food.html">Food</a></li>
+      <li><a class="dropdown-item" href="../ireland/ire_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../ireland/ire_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../ireland/ire_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../ireland/ire_food.html">Food</a></li>
     </ul>
   </div>
   <div class="dropdown">
@@ -36,10 +36,10 @@
       Estonia
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="est_background.html">Background/History</a></li>
-      <li><a class="dropdown-item" href="est_traditions.html">Traditions/Customs</a></li>
-      <li><a class="dropdown-item" href="est_clothes.html">Clothing/Dances</a></li>
-      <li><a class="dropdown-item" href="est_food.html">Food</a></li>
+      <li><a class="dropdown-item" href="../estonia/est_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../estonia/est_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../estonia/est_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../estonia/est_food.html">Food</a></li>
     </ul>
   </div>
   <div class="dropdown">
@@ -48,10 +48,10 @@
       Romania
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="ro_background.html">Background/History</a></li>
-      <li><a class="dropdown-item" href="ro_traditions.html">Traditions/Customs</a></li>
-      <li><a class="dropdown-item" href="ro_clothes.html">Clothing/Dances</a></li>
-      <li><a class="dropdown-item" href="ro_food.html">Food</a></li>
+      <li><a class="dropdown-item" href="../romania/ro_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../romania/ro_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../romania/ro_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../romania/ro_food.html">Food</a></li>
     </ul>
   </div>
   <div class="dropdown">
@@ -60,10 +60,10 @@
       Moldova
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="mo_background.html">Background/History</a></li>
-      <li><a class="dropdown-item" href="mo_traditions.html">Traditions/Customs</a></li>
-      <li><a class="dropdown-item" href="mo_clothes.html">Clothing/Dances</a></li>
-      <li><a class="dropdown-item" href="mo_food.html">Food</a></li>
+      <li><a class="dropdown-item" href="../moldova/mo_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../moldova/mo_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../moldova/mo_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../moldova/mo_food.html">Food</a></li>
     </ul>
   </div>
   <div class="dropdown">
@@ -72,10 +72,10 @@
       Nigeria
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="ni_background.html">Background/History</a></li>
-      <li><a class="dropdown-item" href="ni_traditions.html">Traditions/Customs</a></li>
-      <li><a class="dropdown-item" href="ni_clothes.html">Clothing/Dances</a></li>
-      <li><a class="dropdown-item" href="ni_food.html">Food</a></li>
+      <li><a class="dropdown-item" href="../nigeria/ni_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../nigeria/ni_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../nigeria/ni_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../nigeria/ni_food.html">Food</a></li>
     </ul>
   </div>
   <div class="dropdown">
@@ -84,42 +84,44 @@
       India
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="ind_background.html">Background/History</a></li>
-      <li><a class="dropdown-item" href="ind_traditions.html">Traditions/Customs</a></li>
-      <li><a class="dropdown-item" href="ind_clothes.html">Clothing/Dances</a></li>
-      <li><a class="dropdown-item" href="ind_food.html">Food</a></li>
+      <li><a class="dropdown-item" href="../india/ind_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../india/ind_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../india/ind_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../india/ind_food.html">Food</a></li>
     </ul>
   </div>
     </nav>
 
 
-    <div class='header_pic'>
+ <div class='header_pic'>
 	  <img src='../../images/pic2.jpg' class='header_image' alt='Dublin'>
-	  <div class='centered'>Our &nbsp; Cultures</div>
+	  <div class='centered'>Our &nbsp; Cultures <br>
+     Moldova
+    </div>
 	 </div>
    
 	 <body>
-	<section id='Background'class='container'>
+	<section id='Food'class='container'>
 	   <div class="container content border border-4 border-dark">
-      <h1 class="text-center">Background</h1>
+      <h1 class="text-center">Food</h1>
     <div class="row ">
     <div class='text col-md-6 text-center'>
-    <p>BACKGROUND TEXT HERE
+    <p>FOOD TEXT HERE
     </p>
     </div>
     
-    <img src='images/ireland.jpg' alt='Ireland' class='images col-md-5'>
+    <img src='images/ire_food.jpg' alt='Food image' class='images col-md-5'>
     </div>
     </div>
      </section>
 	
     	<section id='History'class='container'>
 	   <div class="container content border border-4 border-dark">
-      <h1 class="text-center">History</h1>
+      <h1 class="text-center">Food Gallery</h1>
     <div class="row">
     <img src='images/estonia.jpg' alt='Estonia' class='images col-md-5'>
     <div class='text col-md-6 text-center'>
-    <p>HISTORY TEXT HERE
+    <p>FOOD IMAGES HERE
     </p>
     </div>
     
